# tinyos

./: .gitignore  Makefile  README.md  TODO  test.qemu.cmd  test.qemu.sh
.github/workflows/: makefile.yml
ch01_bootsector/: Makefile  Readme.MD  bochsrc.mac  bochsrc.win  common.mk  dump.sh  filter_32bit_to_16bit_asm.awk  snapshot.txt  test.bochs.sh  test.qemu.sh  test.sh  test.under_av.qemu.sh  verify_boot.sh
ch01_bootsector/ada/: .gitignore
ch01_bootsector/asm/: bootsector.asm  common_bios.asm
ch01_bootsector/bas/: .gitignore  Makefile  bootsector.bas  bootsector.bas.asm  common.bas  common_bios.bas  common_prefix.bas.h  common_suffix.bas.h  common_surfix.bas.h  filter_bas_to_c_result.awk  filter_to_c_source.sh  filter_toc_source.awk
ch01_bootsector/c/: .gitignore  Makefile  bootsector.asm  bootsector.c  bootsector.c.asm  bootsector.disasm.asm  bootsector.elf  bootsector.h  bootsector.nasm  common_bios.h  common_prefix.h  common_suffix.h  convert_disasm_to_nasm.py  disassembled_output.txt  filter.txt  linker.ld  test.qemu.sh
ch01_bootsector/go/: Makefile  go.mod  main.go
ch01_bootsector/nasm/: Makefile  bootsector.asm  common.asm  common_bios.asm
ch01_bootsector/nim/: .gitignore  Makefile  bootsector.nim  common.nim  common_bios.nim  common_prefix.nim.h  fatal.nim  filter_nim_to_c_result.awk  filter_toc_source.awk  rawoutput.nim  (+3 more)
ch01_bootsector/rs/: .gitignore  Cargo.toml  rust-toolchain.toml  x86_64-bootloader.json  x86_64-bootsector-none.json  x86_64-unknown-none.json
ch01_bootsector/rs/src/: main.rs
ch02_timer/: Makefile  common.mk  test.qemu.sh
(+34 files in other folders)
